fixed more bugs, padding, and alignment

--- a/client/src/component/HackM-Logo/hackm-logo.scss
+++ b/client/src/component/HackM-Logo/hackm-logo.scss
@@ -9,7 +9,7 @@
 }
 
 .hackmlogo {
-  width: 250px;
+  width: 50vh;
   max-height: auto;
   position: relative;
   bottom: 5px;
