--- a/client/src/component/Live-Schedule/live-schedule.scss
+++ b/client/src/component/Live-Schedule/live-schedule.scss
@@ -23,7 +23,7 @@ ul#schedule-body {
 
   h3 {
     font-size: 1.5em;
-    overflow: hidden;
+    //overflow: hidden;
   }
 }
 
