--- a/client/src/component/LiveCategory/live-category.scss
+++ b/client/src/component/LiveCategory/live-category.scss
@@ -9,7 +9,7 @@
 
   .grid-item{
     text-align: center;
-    overflow: hidden;
+    //overflow: hidden;
     min-width: 0;
     background-color: white;
   }
