--- a/client/src/pages/Live/live.scss
+++ b/client/src/pages/Live/live.scss
@@ -2,10 +2,11 @@
   background-image: linear-gradient(#8d78a1, #a05952, #d15f2a);
   padding-top: 15vh;
   display: grid;
-  grid-template-columns: 55vh auto 69vh;
+  grid-template-columns: 55vh auto 69vh 10px;
   grid-auto-columns: max-content;
   grid-template-areas:
     "logo timer timer"
+    "container container feed"
     "container container twitter"
     "container container instagram"
     "container container devpost"
@@ -14,12 +15,11 @@
     "container container ."
     "container container ."
     "container container ."
-    "container container ."
     "container container .";
 }
 
 #submit {
-  margin-left: 6vw;
+  //margin-left: 6vw;
 }
 
 #live-logo {
@@ -31,6 +31,19 @@
 #live-timer {
   grid-area: timer;
   grid-template-columns: 20%;
+}
+
+#live-feed{
+  grid-area: feed;
+  h1{
+    font-size: 36px;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    background-color: #9a544c;
+    border-radius: 5px;
+  }
+  padding-bottom: 6px;
 }
 
 #live-twitter {
