--- a/client/src/pages/SignUp/signUp.scss
+++ b/client/src/pages/SignUp/signUp.scss
@@ -287,7 +287,7 @@ a {
 }
 
 #submit {
-  width: 270px;
+  //width: 270px;
   background-color: #9a544c;
   padding: 10px;
   color: white;
@@ -301,7 +301,7 @@ a {
 
   justify-content: center;
 
-  max-width: 300px;
+  //max-width: 300px;
   margin: 3% auto;
   overflow: hidden;
 
